unpackaged/main/default/objects/Account/fields/Accept_Donation__c.field-meta.xml
<CustomField>
    <fullName>Accept_Donation__c</fullName>
    <description>Before 2022, Membership used this data to track its own corporate donation policy reviews. This data is no longer in active use, but the overall method of enforcing EDF's Corporate Donation Policy is under review by Emily, Michele, and Kristin, so we want to keep this data in case they incorporate it into a future method.</description>
    <label>Accept Outright Donations</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>