unpackaged/main/default/objects/Account/fields/Account_Record_ID__c.field-meta.xml
<CustomField>
    <fullName>Account_Record_ID__c</fullName>
    <description>Unique value on each record. Can be used as a key. One-to-one relationship with ID, which is also a key. Also, this field can be used to determine the creation history of the record, as follows: We have 2 fields that were used to support continuing the Account ID number values from LCRM in NPSP: Account Autonumber Backup and Record ID. When a record has a blank value in Account Autonumber Backup and a value in Record ID, it was a migrated record from LCRM. When a record has a value in both fields and they don't match, it means the record was created during the Delta -- it has a value in the Account Autonumber Backup field, but it was created in LCRM, so it retains that value. When the field values match, it is an entirely new record.</description>
    <externalId>true</externalId>
    <inlineHelpText>Unique value on each Account.</inlineHelpText>
    <label>Record ID</label>
    <length>30</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>