unpackaged/main/default/objects/Account/fields/Additional_Handler_2__c.field-meta.xml
<CustomField>
    <fullName>Additional_Handler_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>An EDF staff member from a different team who works with the RM and RM2 to maintain this relationship</description>
    <inlineHelpText>The EDF staff person responsible for maintaining the relationship with this constituent in collaboration with the other Relationship Managers and Portfolio Manager if one is assigned</inlineHelpText>
    <label>Relationship Manager 3</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (Additional Handler 2)</relationshipLabel>
    <relationshipName>Accounts4</relationshipName>
    <type>Lookup</type>
</CustomField>