unpackaged/main/default/objects/Account/fields/Affiliation_Role__c.field-meta.xml
<CustomField>
    <fullName>Affiliation_Role__c</fullName>
    <description>DEPRECATE - there had been some discussion about building automation for this but stakeholders didn't want to pursue it. Not in use and not referenced in any flows</description>
    <inlineHelpText>Value in this field will be pushed to the Affiliation Record for the Organization and the Contact in the Primary Contact field</inlineHelpText>
    <label>DEL_Affiliation Role</label>
    <length>255</length>
    <type>Text</type>
</CustomField>