unpackaged/main/default/objects/Account/fields/Affiliation_Type__c.field-meta.xml
<CustomField>
    <fullName>Affiliation_Type__c</fullName>
    <description>DEPRECATE - there had been some discussion about building automation for this but stakeholders didn't want to pursue it. Not in use and not referenced in any flows</description>
    <inlineHelpText>Value in this field will be pushed to the Affiliation record for the Organization and the Contact in the Primary Contact field.</inlineHelpText>
    <label>DEL_Affiliation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Affiliation_Type</valueSetName>
    </valueSet>
</CustomField>