unpackaged/main/default/objects/Account/fields/Alert__c.field-meta.xml
<CustomField>
    <fullName>Alert__c</fullName>
    <inlineHelpText>Critical information about this Account that should be highlighted when viewing the Account.  Please note the Alert does not automatically appear in reporting</inlineHelpText>
    <label>Alert</label>
    <type>TextArea</type>
</CustomField>