unpackaged/main/default/objects/Account/fields/Asset_Date_Sold__c.field-meta.xml
<CustomField>
    <fullName>Asset_Date_Sold__c</fullName>
    <description>Created as a part of Heller Migration 2021.</description>
    <label>DELETE_Asset Date Sold</label>
    <type>Date</type>
</CustomField>