unpackaged/main/default/objects/Account/fields/Banned_Account__c.field-meta.xml
<CustomField>
    <fullName>Banned_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check to indicate account is banned.</inlineHelpText>
    <label>Banned Account</label>
    <type>Checkbox</type>
</CustomField>