unpackaged/main/default/objects/Account/fields/Capacity__c.field-meta.xml
<CustomField>
    <fullName>Capacity__c</fullName>
    <description>Account.Capacity is synced from the Account's Primary Contact through a flow (the same one that controls RM, PM, Constituency, Sub-Constituency)</description>
    <inlineHelpText>Indication of how much a constituent might be able to donate. Capacity is synced across the Account and all Contacts. Please make all edits to Capacity on the Primary Contact's record
•AAAA - $100M +, • AAA - $50M - $99.9M, •AA - $25M - $49.9M
•A - $10M - $24.9M, •B - $5M - $9.9M, •C - $1M - $4.9M
•D - $500K - $999.9K, •E - $100K - $499.9K, •F  - $25K – 99.9K</inlineHelpText>
    <label>Capacity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Capacity</valueSetName>
    </valueSet>
</CustomField>