unpackaged/main/default/objects/Account/fields/Cause_Marketer__c.field-meta.xml
<CustomField>
    <fullName>Cause_Marketer__c</fullName>
    <description>Cause Marketers are companies that get people to buy or participate in things with the promise that part of the proceeds will go to charities. When we receive donations from Cause Marketers, the original buyers/participants are not identified, and we assign the Donor Contact Role for the donation (Opportunity) to the Cause Marketer's Account. This field exists because we report on our revenue from Cause Marketers, and we tailor our communications with them as a segment.</description>
    <inlineHelpText>Indicates that the Account is a Cause Marketing company that encourage consumers to buy or participate with the promise that a portion of the proceeds will go to charities.</inlineHelpText>
    <label>Cause Marketer</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>