unpackaged/main/default/objects/Account/fields/CCL_Level__c.field-meta.xml
<CustomField>
    <fullName>CCL_Level__c</fullName>
    <description>Nationally influential companies we mobilize to advocate for federal climate policy based on our joint design principles.  Level 1 = Intermittent contact with one part of the company.  Company Receptive to outreach. Offers information.
Level 5 = Receptive to outreach. Offers information.  Takes action. Publicly supports federal climate policy and engages policy makers proactively.</description>
    <inlineHelpText>Level 1-Intermittent contact with one part of the company. Company Receptive to outreach. Offers information.
Level 5-Receptive to outreach. Offers information.Takes action. Publicly supports federal climate policy and engages policy makers proactively.</inlineHelpText>
    <label>CCL Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>-1</fullName>
            </value>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>