unpackaged/main/default/objects/Account/fields/Climate_Corps_Consultant_Access__c.field-meta.xml
<CustomField>
    <fullName>Climate_Corps_Consultant_Access__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Allows Climate Corps consultants to access accounts related to fellowship program. Updated via flow.</description>
    <inlineHelpText>Allows Climate Corps consultants to access accounts related to fellowship program. Updated via flow.</inlineHelpText>
    <label>Climate Corps Consultant Access</label>
    <type>Checkbox</type>
</CustomField>