unpackaged/main/default/objects/Account/fields/Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Close_Date__c</fullName>
    <description>Created as a part of Heller Migration 2021.</description>
    <label>Close Date</label>
    <type>Date</type>
</CustomField>