unpackaged/main/default/objects/Account/fields/Constituency_Other_for_SGD__c.field-meta.xml
<CustomField>
    <fullName>Constituency_Other_for_SGD__c</fullName>
    <description>This is a Hidden checkbox field for if Constituency does not include EDF Alumni or Staff. This Field is used in an SDG filter - SDG Task Related Contact - Other</description>
    <formula>IF(OR( INCLUDES( Organization_Constituency__c , "EDF Alumni"),INCLUDES( Organization_Constituency__c , "EDF Staff")),False,True)</formula>
    <label>Constituency - Other for SGD</label>
    <type>Checkbox</type>
</CustomField>