unpackaged/main/default/objects/Account/fields/Contingent_Beneficiary__c.field-meta.xml
<CustomField>
    <fullName>Contingent_Beneficiary__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>EDF is a beneficiary that is contingent on a specific condition outlined in the governing estate document</inlineHelpText>
    <label>Contingent Beneficiary</label>
    <type>Checkbox</type>
</CustomField>