unpackaged/main/default/objects/Account/fields/Date_of_last_assessment__c.field-meta.xml
<CustomField>
    <fullName>Date_of_last_assessment__c</fullName>
    <description>2/9: Stakeholders don't recognize. 292 records populated with dates ranging from 11/21/2013 to 1/24/2022.
JS: DEPRECATE, with awareness that the user of this data may turn up thanks to the deprecation process (in particular, seeing what report, if any, uses this field).</description>
    <label>DEL_Date of last assessment</label>
    <type>Date</type>
</CustomField>