unpackaged/main/default/objects/Account/fields/Development_Constituent_Source__c.field-meta.xml
<CustomField>
    <fullName>Development_Constituent_Source__c</fullName>
    <label>Development Constituent Source</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Membership - Upgrade</fullName>
            </value>
            <value>
                <fullName>Membership – Screening</fullName>
            </value>
            <value>
                <fullName>Formerly in portfolio</fullName>
            </value>
            <value>
                <fullName>Development Staff</fullName>
            </value>
            <value>
                <fullName>Executive Staff</fullName>
            </value>
            <value>
                <fullName>Program Staff</fullName>
            </value>
            <value>
                <fullName>Research Staff</fullName>
            </value>
            <value>
                <fullName>Trustee</fullName>
            </value>
            <value>
                <fullName>Friend/Volunteer</fullName>
            </value>
            <value>
                <fullName>Event</fullName>
            </value>
            <value>
                <fullName>Program prospecting</fullName>
            </value>
            <value>
                <fullName>Conference / non-EDF event</fullName>
            </value>
            <value>
                <fullName>Catalyst Circle</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Planned Giving</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>