unpackaged/main/default/objects/Account/fields/Development_Constituent_Source_Date__c.field-meta.xml
<CustomField>
    <fullName>Development_Constituent_Source_Date__c</fullName>
    <inlineHelpText>The date the constituent was introduced to EDF Development (excludes Membership) and not necessarily how they were introduced to the EDF organization.</inlineHelpText>
    <label>Development Constituent Source Date</label>
    <type>Date</type>
</CustomField>