unpackaged/main/default/objects/Account/fields/Development_Constituent_Source_Descript__c.field-meta.xml
<CustomField>
    <fullName>Development_Constituent_Source_Descript__c</fullName>
    <inlineHelpText>The details and history of how the constituent was introduced to EDF Development (excludes Membership)</inlineHelpText>
    <label>Development Constituent Source Descript</label>
    <length>80</length>
    <type>Text</type>
</CustomField>