unpackaged/main/default/objects/Account/fields/Diverse_Serving_Organization1__c.field-meta.xml
<CustomField>
    <fullName>Diverse_Serving_Organization1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Environmental Justice Organization</label>
    <type>Checkbox</type>
</CustomField>