unpackaged/main/default/objects/Account/fields/Donor_Qualification_Date__c.field-meta.xml
<CustomField>
    <fullName>Donor_Qualification_Date__c</fullName>
    <inlineHelpText>The date a Portfolio Manager or other Development staff updated the Donor Qualification Status</inlineHelpText>
    <label>Donor Qualification Date</label>
    <type>Date</type>
</CustomField>