unpackaged/main/default/objects/Account/fields/Donor_Qualification_Notes__c.field-meta.xml
<CustomField>
    <fullName>Donor_Qualification_Notes__c</fullName>
    <inlineHelpText>Brief rationale supporting the Donor Qualification Status provided by Portfolio Manager or Development Staff</inlineHelpText>
    <label>Development Qualification Notes</label>
    <type>TextArea</type>
</CustomField>