unpackaged/main/default/objects/Account/fields/Ecosystem_Tags__c.field-meta.xml
<CustomField>
    <fullName>Ecosystem_Tags__c</fullName>
    <description>DEPRECATE at account level - we want to KEEP contact level.</description>
    <label>DEL_Ecosystem Tags</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Top Producers Network</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>