unpackaged/main/default/objects/Account/fields/EDF_HPC_Account__c.field-meta.xml
<CustomField>
    <fullName>EDF_HPC_Account__c</fullName>
    <description>Highest previous contribution amount for this account</description>
    <inlineHelpText>The Close Amount of the received Opportunity with the highest Close Amount where the Account has a hard or soft credit gift (Planned Gifts not included).</inlineHelpText>
    <label>HPC Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>