unpackaged/main/default/objects/Account/fields/EDFBIZ_Company_Commitments__c.field-meta.xml
<CustomField>
    <fullName>EDFBIZ_Company_Commitments__c</fullName>
    <description>These are internal commitments or procedures companies take to lower their own carbon footprints.</description>
    <inlineHelpText>These are internal commitments or procedures companies take to lower their own carbon footprints.</inlineHelpText>
    <label>EDFBIZ Company Actions</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>c$</fullName>
            </value>
            <value>
                <fullName>RE100</fullName>
            </value>
            <value>
                <fullName>SBT</fullName>
            </value>
            <value>
                <fullName>Net Zero Commitment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>